# demowebshop_api_tes_18_lesson_qaguru

./: .gitignore  README.md  paths.py  pyproject.toml
methods/: add_to_cart_api.py
tests/: conftest.py  demowebshop_api_test.py
